engine/tests/fixtures/invalid/http-api-semantics/actor-user.tg
actor actor_user {
  name "User"
  description "Fixture actor for invalid HTTP API semantics tests"

  status active
}
